fix padding ang text-align-center in features_box

--- a/css/style.css
+++ b/css/style.css
@@ -245,7 +245,8 @@ section {
   display: flex;
   flex-direction: column;
   background-color: var(--bgr-color);
-  padding: 1rem  0 1rem 0;
+  padding: 1rem;
+  text-align: center;
   margin: 1rem;
   width: 325px;
   height: 500px;
